<resources>
    <string name="app_name">wrtHub</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_allow_changes">Allow the app to make changes to the router\'s configuration (may include rebooting the router)</string>
    <string name="pref_title_ip_address">IP Address</string>
    <string name="pref_default_username">root</string>
    <string name="pref_title_router_type">Router type</string>
    <string-array name="pref_router_firmware">
        <item>Tomato</item>
        <item>DD-Wrt</item>
        <item>OpenWrt</item>
        <item>Linksys</item>
        <item>Cisco</item>
    </string-array>
    <string-array name="pref_router_firmware_value">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="pref_router_protocol">
        <item>ssh</item>
        <item>telnet</item>
    </string-array>
    <string-array name="prioritize_times">
        <item>20 minites</item>
        <item>2 hours</item>
        <item>1 day</item>
    </string-array>
    <string-array name="prioritize_times_values">
        <item>1200000</item>
        <item>7200000</item>
        <item>86400000</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_main">wrtHub</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="continu">Continue</string>
    <string name="ip_address">IP Address</string>
    <string name="change_password">Change password</string>
    <string name="welcome_text">Welcome to wrtHub!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_client">0</string>
    <string name="internet">internet</string>
    <string name="router">router</string>
    <string name="devices">" devices"</string>
    <string name="are_connected">" are connected."</string>
    <string name="everything_looks_good">Everything looks good.</string>
    <string name="scanning_network">scanning network...</string>
    <string name="connection_failure">Could not connect to router.</string>
    <string name="scan_failure">Could not scan the network.</string>
    <string name="title_overview">OVERVIEW</string>
    <string name="title_wifi_access">WI-FI ACCESS</string>
    <string name="is_on">" is ON"</string>
    <string name="is_off">" is OFF"</string>
    <string name="but_hidden">" and HIDDEN"</string>
    <string name="empty_string"></string>
    <string name="devices_on">"Devices on "</string>
    <string name="searching_for_router">searching for router...</string>
    <string name="rescannng_network">Re-scanning network...</string>
    <string name="username">Username</string>
    <string name="port">Port</string>
    <string name="pref_title_allow_changes">Allow changes to router config</string>
    <string name="pref_title_username">Username</string>
    <string name="pref_key_router_type">router_type</string>
    <string name="pref_key_ip_address">ip_address</string>
    <string name="pref_key_username">username</string>
    <string name="pref_key_password">password</string>
    <string name="pref_key_port">port</string>
    <string name="pref_key_allow_changes">allow changes</string>
    <string name="modify_device_name">Rename this device</string>
    <string name="show_password">Show Password</string>
    <string name="enabled">Enabled?</string>
    <string name="external_ip_address">External IP Address:</string>
    <string name="uptime">Uptime:</string>
    <string name="memory">Memory:</string>
    <string name="cpu">CPU:</string>
    <string name="router_details">Router details</string>
    <string name="modify_network_name">Modify network name</string>
    <string name="pref_title_protocol">Protocol</string>
    <string name="pref_key_protocol">protocol</string>
    <string name="wifi_password">Wifi Password</string>
    <string name="share">Share</string>
    <string name="share_body">The wifi password for [SSID] is \'[PASSWORD]\'.</string>
    <string name="share_subject">Wifi password</string>
    <string name="how_do_you_want_to_share">How do you want to share the password?</string>
    <string name="title_activity_speed_test">Speed Test</string>
    <string name="sharedPreferences_name">wrtHub</string>
    <string name="internet_speed">Internet speed</string>
    <string name="wifi_speed">Wifi speed</string>
    <string name="no_networks_found">Router has no networks defined</string>
    <string name="test_failed">Test failed</string>
    <string name="unknown_linux_router">unknown linux router</string>
    <string name="manage_device">Manage Device</string>
    <string name="rename">rename:</string>
    <string name="block_confirm">BLOCK this device from your network?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="block">Block</string>
    <string name="unblock">Unblock</string>
    <string name="blocking">"blocking "</string>
    <string name="unblocking">"unblocking "</string>
    <string name="prioritize">Prioritize</string>
    <string name="refresh">Refresh</string>
    <string name="low_memory">Unable to test, low memory</string>
    <string name="running_in_demo_mode">DEMO mode.  Set router type in settings.</string>
    <string name="wifi_not_enabled">WiFi not enabled</string>
    <string name="prioritize_device">Prioritize Device</string>
    <string name="prioritize_device_time">Length of time to prioritize device for:</string>
    <string name="priority_access_until">Prioritized until</string>
    <string name="prioritize_not_implemented_for_router_type">Prioritize is not implemented for this router type</string>
    <string name="indeterminite_priority_access">Prioritized</string>
    <string name="reboot">Reboot</string>
    <string name="confirm_reboot">Reboot router?</string>
    <string name="reboot_explanation">Rebooting your router will remove all \'blocked\' and \'prioritized\' devices</string>
    <string name="router_is_rebooting">Router is rebooting.</string>
    <string name="wait_for_reboot">The app will now exit.  Wait until the router has completed rebooting before restarting the app.</string>
    <string name="ok">OK</string>
    <string name="internal_ip_address">Internal IP Address:</string>
    <string name="gateway_address">Gateway Address:</string>
    <string name="password_change_not_supported">Password change not supported on this router type</string>
    <string name="password_change_failed">Password change failed</string>
    <string name="wifi_disconnect_warning_with_exit">All WiFi devices will be temporarily disconnected as the WiFi service is restarted.\n\nThe app now exit.\n\nPlease wait until your WiFi connection has been re-established before re-starting the app.</string>
    <string name="wifi_disconnect_warning">All WiFi devices will be temporarily disconnected as the WiFi service is restarted.</string>
    <string name="warning">Warning</string>
    <string name="new_password">Enter a new password</string>
    <string name="password_cannot_be_empty">Password cannot be empty</string>
    <string name="password_too_short">Password is too short</string>
    <string name="help">Help</string>
    <string name="wrthub_website">https://wrthub.wordpress.com</string>
    <string name="hidden">Hidden?</string>
    <string name="visible">Visible?</string>
    <string name="confirm_enable_wifi">"Are you sure you want to turn this WiFi "</string>
    <string name="confirm_hide_wifi">"Are you sure you want to hide this SSID?"</string>
    <string name="confirm_show_wifi">"Are you sure you want to broadcast this SSID?"</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="disable">Disable</string>
    <string name="enable">Enable</string>
    <string name="broadcast">Broadcast</string>
    <string name="hide">Hide</string>
    <string name="title_activity_first_run_">Welcome to wrtHub</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="get_started">Get Started</string>
    <string name="demo_mode">Demo mode</string>
    <string name="firstrun_page1_line1">Simple and Secure</string>
    <string name="pref_key_first_run">firstrun</string>
    <string name="pref_first_run">Run first-run wizard at next launch</string>
    <string name="pref_key_category_advanced">pref_key_category_advanced</string>
    <string name="pref_category_advanced">Advanced Settings</string>
    <string name="first_run_reset">First Run wizard will be displayed on next launch</string>
    <string name="rate_this_app">Rate wrtHub!</string>
    <string name="pref_key_rating">rating</string>
    <string name="pref_key_category_general">general</string>
    <string name="pref_category_general">General Settings</string>
    <string name="change_it_when_they_leave">Change it when they leave</string>
    <string name="share_your_password_with_friends">Share your password with friends</string>
    <string name="block_unfamiliar_devices">BLOCK unfamiliar devices</string>
    <string name="see_who_is_on_your_network">See who is on your network</string>
    <string name="prioritize_individual_devices">Prioritize individual devices</string>
    <string name="discover_where_your_bandwidth_is_going">Discover where your bandwidth is going</string>
    <string name="firstrun_bypass">firstrun_bypass</string>
    <string name="connect_to_wifi">Connect to your WiFi network</string>
    <string name="tap_to_continue">Tap to continue</string>
    <string name="enable_ssh">Please enable ssh (or telnet) on your router.</string>
    <string name="router_found">Router found</string>
    <string name="console_found">Console identified</string>
    <string name="enter_your">"Enter your "</string>
    <string name="password">" password"</string>
    <string name="password_set">Password set</string>
    <string name="user_not_identified">User not auto-identified</string>
    <string name="username_set">Username set</string>
    <string name="unable_to_connect">Unable to connect to your router</string>
    <string name="redirect_to_settings">Opening the Settings dialog...</string>
    <string name="user_identified">User identified</string>
    <string name="unusually_fast">unusually fast</string>
    <string name="unusually_slow">unusually slow</string>
    <string name="pref_key_reset_speed">reset_speed_history</string>
    <string name="reset_speed_test_history">Reset speed test history</string>
    <string name="reset_speed_history">Reset speed history?</string>
</resources>