<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="tomato"
        android:entries="@array/pref_router_firmware"
        android:entryValues="@array/pref_router_firmware_value"
        android:key="@string/pref_key_router_type"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_router_type" />

    <ListPreference
        android:defaultValue="ssh"
        android:entries="@array/pref_router_protocol"
        android:entryValues="@array/pref_router_protocol"
        android:key="@string/pref_key_protocol"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_protocol" />
    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:defaultValue="0.0.0.0"
        android:inputType="phone"
        android:key="@string/pref_key_ip_address"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_ip_address" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_username"
        android:inputType="textAutoComplete"
        android:key="@string/pref_key_username"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_username" />

    <EditTextPreference
        android:defaultValue="@null"
        android:inputType="textPassword"
        android:key="@string/pref_key_password"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/change_password" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/pref_key_readonly"
        android:summary="@string/pref_allow_changes"
        android:title="@string/pref_title_allow_changes" />



    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->

</PreferenceScreen>
